<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nmwilkinson.visionview.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/detection"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/barcode" />

    <RadioButton
        android:id="@+id/ocr"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="86dp"
        android:text="@string/ocr"
        app:layout_constraintBottom_toBottomOf="@+id/barcode"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioButton
        android:id="@+id/barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="93dp"
        android:text="@string/barcode"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/camera_options"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/autofocus" />

    <Switch
        android:id="@+id/autofocus"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:switchTextAppearance="@android:style/TextAppearance.DeviceDefault"
        android:text="@string/autofocus"
        app:layout_constraintBottom_toTopOf="@+id/flash"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Switch
        android:id="@+id/flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:switchTextAppearance="@android:style/TextAppearance.DeviceDefault"
        android:text="@string/flash"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
